--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,10 @@
-flask==3.0.0
-Flask-Cors==4.0.0
-Flask-RESTful==0.3.10
-pandas
-openpyxl
-ipykernel
-notebook
-jupyterlab
-openai
-python-dotenv
-pypdf
-yt_dlp
-pydub
-altair
-langchain[all]
-chromadb
-lark
-scikit-learn
-panel
-jupyter_bokeh
-docarray
-wikipedia
+face_recognition==1.3.0
+Flask==3.0.0
+flask_cors==4.0.0
+flask_restful==0.3.10
+openai==0.28.1
+pdf2image==1.16.3
+Pillow==10.1.0
+pipreqs==0.4.13
+pytesseract==0.3.10
+python-dotenv==1.0.0
