--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,15 @@
   "[python]": {
     "editor.defaultFormatter": "ms-python.autopep8"
   },
-  "python.formatting.provider": "none"
+  "python.formatting.provider": "none",
+  "cSpell.words": [
+    "dotenv",
+    "langchain",
+    "openai",
+    "pytesseract",
+    "TESAT",
+    "tessdata",
+    "tesseract",
+    "vectorstores"
+  ]
 }
