--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ Pillow==10.1.0
 pipreqs==0.4.13
 pytesseract==0.3.10
 python-dotenv==1.0.0
+mysql-connector-python==8.2.0
 langchain
 tiktoken
 chromadb
