--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,7 @@
   "[python]": {
     "editor.defaultFormatter": "ms-python.autopep8"
   },
-  "python.formatting.provider": "none",
+  "python.formatting.provider": "ms-python.autopep8",
   "cSpell.words": [
     "dotenv",
     "langchain",
