--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,15 @@
 face_recognition==1.3.0
+face_recognition_models==0.3.0
 Flask==3.0.0
 flask_cors==4.0.0
 flask_restful==0.3.10
+mysql-connector-python==8.2.0
 openai==0.28.1
 pdf2image==1.16.3
 Pillow==10.1.0
 pipreqs==0.4.13
 pytesseract==0.3.10
 python-dotenv==1.0.0
-mysql-connector-python==8.2.0
 pymongo==4.6.1
+PyPDF2==3.0.1
+setup-tools==69.0.3
