--- a/requirements.txt
+++ b/requirements.txt
@@ -7,9 +7,7 @@ mysql-connector-python==8.2.0
 openai==0.28.1
 pdf2image==1.16.3
 Pillow==10.1.0
-pipreqs==0.4.13
-pytesseract==0.3.10
 python-dotenv==1.0.0
 pymongo==4.6.1
 PyPDF2==3.0.1
-setup-tools==69.0.3
+setuptools==69.0.3
